# rotors_simulator

rotors_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
rotors_control/include/rotors_control/: cell.h  common.h  global_planner.h  node.h
rotors_control/src/nodes/: global_planner_node.cpp  global_planner_node.h  lee_position_controller_node.cpp  path_handler_node.cpp  path_handler_node.h  repeat_setpoint_node.cpp  repeat_setpoint_node.h
rotors_description/urdf/: depth_camera_base.xacro  iris.xacro  iris_depth_camera.gazebo  laser_sensor_base.xacro
rotors_gazebo/: CMakeLists.txt  package.xml
rotors_gazebo/launch/: gazebo_iris_mavros_posix_sitl.launch  iris_depth_camera.launch  mav_waypoints_with_vi_sensor.launch  mav_with_planner.launch
rotors_gazebo/resource/: chosen_goals  chosen_goals2  example_waypoints.txt  example_waypoints2.txt  example_waypoints3.txt  open_goals  overestimation_goals  random_goals  sample_goals
rotors_gazebo/src/: global_planner_node.cpp  waypoint_planner.cpp
rotors_gazebo/worlds/: test_city.world  test_city_2.world  test_city_3.world  test_city_4.world
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_mavlink_interface.h
rotors_gazebo_plugins/src/: gazebo_mavlink_interface.cpp  gazebo_motor_model.cpp
